--- a/Starter_Files/Resources/ETL_Mini_Project_WHennum_PYoung.ipynb
+++ b/Starter_Files/Resources/ETL_Mini_Project_WHennum_PYoung.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,38 +1251,185 @@
        "      <td>theater</td>\n",
        "      <td>plays</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2986</td>\n",
+       "      <td>3684</td>\n",
+       "      <td>Manning-Hamilton</td>\n",
+       "      <td>Vision-oriented scalable definition</td>\n",
+       "      <td>97300</td>\n",
+       "      <td>153216</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>2043</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1609221600</td>\n",
+       "      <td>1622350800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "      <td>food</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2031</td>\n",
+       "      <td>5784</td>\n",
+       "      <td>Butler LLC</td>\n",
+       "      <td>Future-proofed upward-trending migration</td>\n",
+       "      <td>6600</td>\n",
+       "      <td>4814</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>112</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1634274000</td>\n",
+       "      <td>1638252000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1627</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>Ball LLC</td>\n",
+       "      <td>Right-sized full-range throughput</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>4603</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>139</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>1636174800</td>\n",
+       "      <td>1639116000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2175</td>\n",
+       "      <td>6073</td>\n",
+       "      <td>Taylor, Santiago and Flores</td>\n",
+       "      <td>Polarized composite customer loyalty</td>\n",
+       "      <td>66600</td>\n",
+       "      <td>37823</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>374</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1602133200</td>\n",
+       "      <td>1618117200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>music/indie rock</td>\n",
+       "      <td>music</td>\n",
+       "      <td>indie rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1788</td>\n",
+       "      <td>4939</td>\n",
+       "      <td>Hernandez, Norton and Kelley</td>\n",
+       "      <td>Expanded eco-centric policy</td>\n",
+       "      <td>111100</td>\n",
+       "      <td>62819</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>1122</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1609308000</td>\n",
+       "      <td>1629262800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "      <td>food</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cf_id  contact_id                 company_name  \\\n",
-       "0    147        4661   Baldwin, Riley and Jackson   \n",
-       "1   1621        3765                     Odom Inc   \n",
-       "2   1812        4187   Melton, Robinson and Fritz   \n",
-       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
-       "4   1365        2199                Larson-Little   \n",
+       "     cf_id  contact_id                  company_name  \\\n",
+       "0      147        4661    Baldwin, Riley and Jackson   \n",
+       "1     1621        3765                      Odom Inc   \n",
+       "2     1812        4187    Melton, Robinson and Fritz   \n",
+       "3     2156        4941   Mcdonald, Gonzalez and Ross   \n",
+       "4     1365        2199                 Larson-Little   \n",
+       "..     ...         ...                           ...   \n",
+       "995   2986        3684              Manning-Hamilton   \n",
+       "996   2031        5784                    Butler LLC   \n",
+       "997   1627        1498                      Ball LLC   \n",
+       "998   2175        6073   Taylor, Santiago and Flores   \n",
+       "999   1788        4939  Hernandez, Norton and Kelley   \n",
        "\n",
-       "                                     description    goal  pledged     outcome  \\\n",
-       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
-       "1               Managed bottom-line architecture    1400    14560  successful   \n",
-       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
-       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
-       "4                      Proactive foreground core    7600     5265      failed   \n",
+       "                                       description    goal  pledged  \\\n",
+       "0             Pre-emptive tertiary standardization     100        0   \n",
+       "1                 Managed bottom-line architecture    1400    14560   \n",
+       "2     Function-based leadingedge pricing structure  108400   142523   \n",
+       "3    Vision-oriented fresh-thinking conglomeration    4200     2477   \n",
+       "4                        Proactive foreground core    7600     5265   \n",
+       "..                                             ...     ...      ...   \n",
+       "995            Vision-oriented scalable definition   97300   153216   \n",
+       "996       Future-proofed upward-trending migration    6600     4814   \n",
+       "997              Right-sized full-range throughput    7600     4603   \n",
+       "998           Polarized composite customer loyalty   66600    37823   \n",
+       "999                    Expanded eco-centric policy  111100    62819   \n",
        "\n",
-       "   backers_count country currency  launched_date    end_date  staff_pick  \\\n",
-       "0              0      CA      CAD     1581573600  1614578400       False   \n",
-       "1            158      US      USD     1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD     1608184800  1640844000       False   \n",
-       "3             24      US      USD     1634792400  1642399200       False   \n",
-       "4             53      US      USD     1608530400  1629694800       False   \n",
+       "        outcome  backers_count country currency  launched_date    end_date  \\\n",
+       "0        failed              0      CA      CAD     1581573600  1614578400   \n",
+       "1    successful            158      US      USD     1611554400  1621918800   \n",
+       "2    successful           1425      AU      AUD     1608184800  1640844000   \n",
+       "3        failed             24      US      USD     1634792400  1642399200   \n",
+       "4        failed             53      US      USD     1608530400  1629694800   \n",
+       "..          ...            ...     ...      ...            ...         ...   \n",
+       "995  successful           2043      US      USD     1609221600  1622350800   \n",
+       "996      failed            112      US      USD     1634274000  1638252000   \n",
+       "997    canceled            139      IT      EUR     1636174800  1639116000   \n",
+       "998      failed            374      US      USD     1602133200  1618117200   \n",
+       "999    canceled           1122      US      USD     1609308000  1629262800   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "     staff_pick  spotlight category & sub-category    category  subcategory  \n",
+       "0         False      False        food/food trucks        food  food trucks  \n",
+       "1         False       True              music/rock       music         rock  \n",
+       "2         False      False          technology/web  technology          web  \n",
+       "3         False      False              music/rock       music         rock  \n",
+       "4         False      False           theater/plays     theater        plays  \n",
+       "..          ...        ...                     ...         ...          ...  \n",
+       "995       False       True        food/food trucks        food  food trucks  \n",
+       "996       False      False           theater/plays     theater        plays  \n",
+       "997       False      False           theater/plays     theater        plays  \n",
+       "998       False       True        music/indie rock       music   indie rock  \n",
+       "999       False      False        food/food trucks        food  food trucks  \n",
+       "\n",
+       "[1000 rows x 17 columns]"
       ]
      },
      "execution_count": 15,
@@ -1291,7 +1438,9 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df.rename(columns = {'blurb': 'description', 'launched_at': 'launched_date', 'deadline': 'end_date'}, inplace = True, errors = 'raise')\n",
+    "campaign_df"
    ]
   },
   {
@@ -1480,7 +1629,9 @@
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[['goal','pledged']] = campaign_df[['goal','pledged']].astype('float')\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1517,7 +1668,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
@@ -1707,7 +1859,11 @@
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "\n",
+    "campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -2054,7 +2210,8 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
+    "campaign_merge1_df = campaign_df.merge(category_df, on = 'category', how = 'left')\n",
+    "campaign_merged_df = campaign_merge1_df.merge(subcategory_df, on = 'subcategory', how = 'left')\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
@@ -2227,17 +2384,19 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned = campaign_merged_df.drop(['staff_pick','spotlight', 'category & sub-category', 'category', 'subcategory'], axis = 1)\n",
+    "campaign_cleaned.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned.to_csv(\"../Resources/campaign.csv\", index=False)"
    ]
   },
   {
@@ -2249,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2273,51 +2432,51 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>contact_info</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}</td>\n",
+       "      <td>contact_info</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}</td>\n",
+       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>{\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}</td>\n",
+       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>{\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}</td>\n",
+       "      <td>{\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>{\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}</td>\n",
+       "      <td>{\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                contact_info\n",
-       "0   {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}\n",
-       "1          {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}\n",
-       "2            {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}\n",
-       "3  {\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}\n",
-       "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
+       "                                                                                            \n",
+       "0                                                                               contact_info\n",
+       "1   {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}\n",
+       "2          {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}\n",
+       "3            {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}\n",
+       "4  {\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('../Resources/contacts.xlsx', header=2)\n",
     "contact_info_df.head()"
    ]
   },
